2006-10-30  Per Bothner  <per@bothner.com>

	* NodeTree.java: Add support for a tble of ID mappings,
	though until we do validation only xml:id attributes are recognized.
	(idNames, idOffsets, idCount): New fields.
	(makeIDtableIfNeeded, lookupID, enterID): New methods.

2006-10-29  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java: "Hash-cons" NamespaceBindings, to speed
	up parsing of XML file with lots of identical namespace declaration
	attributes - such as XQTS's XQTSCatalog.xml.
	(currentNamespacePrefix): New field.
	(stringValue): Pre-allocate rather than allocating one each time.
	(emitBeginAttribute)): Update accordingly.
	(endAttribute): Search for or allocate NamespaceBinding.
	(closeStartTag): Don't reverse NamespaceBinding list.
	(writeChar etc): Check currentNamespacePrefix rather than stringValue -
	which now never null.
	(MappingInfo.match(StringBuffer)): New method.
	* XName.java: Specify that namespace bindings are in inverse
	document/parsing order, since that makes parsing easier.
	* NamespaceBinding.java (nconc): New static helper method.
	* XMLPrinter.java (beginGroup): Print/sort bindings in reverse order.

2006-10-26  Per Bothner  <per@bothner.com>

	* NodeTree.java (typeValue): Convert to UntypedAtomic for nodes
	types that require it.

	* NodeTree.java: Support "in-line" stringizing of nodes in
	attribute and similar contexts.
	(stringizingLevel, stringizingElementLevel): New field.
	(writeXxx): Check stringizingLevel.

	* NodeTree.java (endAttribute): If name is 'xml:id' normalize value.

	Re-write, mainly to correctly set in-scope namespaces of element.
	* NodeTree.java (groupLevel, groupNamespaces, gapStartTag, attrIndexes,
	workStack, attrCount, inAttribute, copyNamespacesMode): New fields.
	(COPY_NAMESPACES_PRESERVE, COPY_NAMESPACES_INHERIT): New fields.
	(writeObject): When converting Keyword as attribute, convert to Symbol.
	(closeTag): New method, called a number of places.